# arm_v5

./: 2  Cargo.toml
arm_interface/: package.json
arm_interface/src/: App.tsx  main.tsx
arm_interface/src-tauri/: Cargo.toml  tauri.conf.json
arm_interface/src-tauri/src/: error.rs  main.rs
arm_interface/src-tauri/src/arm/: mod.rs
arm_interface/src-tauri/src/arm/motion/: circle.rs  linear.rs  mod.rs  player.rs
arm_interface/src-tauri/src/frontend/: mod.rs
arm_interface/src-tauri/src/frontend/commands/: arm.rs
arm_interface/src-tauri/src/frontend/events/: arm.rs
arm_interface/src-tauri/src/kinematics/: error.rs  mod.rs
arm_interface/src-tauri/src/kinematics/forward/algorithms/: analytical.rs  mod.rs
arm_interface/src-tauri/src/kinematics/inverse/algorithms/: heuristic.rs  mod.rs
arm_interface/src-tauri/src/kinematics/inverse/solvers/: heuristic.rs  mod.rs
arm_interface/src-tauri/src/kinematics/motion/: circle.ipynb  circle.rs  player.rs
arm_interface/src-tauri/src/servo_com/: commands.rs  events.rs  mod.rs  replies.rs
arm_interface/src/components/: ManualControl.component.tsx  Visualization.component.tsx
arm_interface/src/helpers/: timeout.ts
arm_interface/src/hooks/: useListen.tsx
arm_interface/src/providers/: ArmProvider.tsx
com/: Cargo.toml
com/src/: error.rs  lib.rs  main.rs
com/src/client/: mod.rs  receiver.rs  transmitter.rs
com/src/client/receiver/: mod.rs
com/src/net/: mod.rs  packet_reader.rs  packet_writer.rs
com/src/proto/: mod.rs
kinematics/: Cargo.toml
kinematics/src/: error.rs  lib.rs
(+8 files in other folders)
